concord_macros/tests/usage/fail/fail_non_paginated_paginate.stderr
error[E0277]: the trait bound `EpPingHe9bee119c6a37b89: PaginatedEndpoint<UsageNonPaginatedApiCx>` is not satisfied
  --> tests/usage/fail/fail_non_paginated_paginate.rs:16:24
   |
16 |     let _ = api.ping().paginate().collect().await?;
   |                        ^^^^^^^^ unsatisfied trait bound
   |
help: the trait `PaginatedEndpoint<UsageNonPaginatedApiCx>` is not implemented for `EpPingHe9bee119c6a37b89`
  --> tests/usage/fail/fail_non_paginated_paginate.rs:5:1
   |
 5 | / api! {
 6 | |     client UsageNonPaginatedApi {
 7 | |         base "https://example.com"
...  |
10 | |     GET Ping
   | |____________^
note: required by a bound in `PendingRequest::<'a, Cx, E, T>::paginate`
  --> $WORKSPACE/concord_core/src/request.rs
   |
   |     pub fn paginate(self) -> PaginatedRequest<'a, Cx, E, T>
   |            -------- required by a bound in this associated function
   |     where
   |         E: PaginatedEndpoint<Cx>,
   |            ^^^^^^^^^^^^^^^^^^^^^ required by this bound in `PendingRequest::<'a, Cx, E, T>::paginate`
   = note: this error originates in the macro `api` (in Nightly builds, run with -Z macro-backtrace for more info)
